# nlp_specifier

./: .gitignore  README.md  code_split.py  code_tree.py  codegrammar.cfg  doc_parser.py  docker-compose.yml  main.py  main2.py  main3.py  nlp.env  original_try.py
data/: test.rs  test2.rs  test3.rs  test4.rs  test5.rs  test_mod2.rs  test_mods.rs
doc_json/: Cargo.toml  parse_html.py  setup.sh
doc_json/src/: docs.rs  lib.rs  lib_py.rs  main.rs
doc_parser/: __main__.py  analysis_succ.txt  astvis.py  base_grammar_test_cases.txt  codegrammar.cfg  doc_parser.py  fix_tokens.py  fn_calls.py  grammar.py  lemmatizer.py  main.py  ner.py  nlp_query.py  palette.py  pyproject.toml  requirements.txt  setup.sh  similarity.py  to_jsonl.py  tokenizer.py  treevis.py  word_to_num.py
doc_parser/doc_parser_utils/: Cargo.toml
doc_parser/doc_parser_utils/src/: lib.rs
doc_parser/rs_doc_parser/: Cargo.toml
doc_parser/rs_doc_parser/src/: docs.rs  main.rs  parse_html.rs  search_tree.rs
doc_parser/src/: lib.rs
jml_nlp/: README.md  docker-compose.yml  nlp.env  setup.sh
pyrs_ast/: Cargo.toml  README.md  __init__.py  ast_types.py  docs.py  expr.py  lib.py  query.py  scope.py  setup.sh  test.rs  test2.rs  types.py  utils.py
pyrs_ast/astx/src/: lib.rs
pyrs_ast/src/: lib.rs
src/: Cargo.toml  DEVELOP.md  requirements.txt  setup.sh
src/chartparse/: Cargo.toml  README.md
src/chartparse/src/: chart.rs  chartrule.rs  edge.rs  grammar.rs  lib.rs  production.rs  select.rs  tree.rs  utils.rs
src/codegen/: __main__.py  nonterminals.cfg  requirements.txt  symbol_tree.rs  terminals.cfg
src/doc_json/: Cargo.toml  __init__.py  parse_html.py  scrape_docrs.py
src/doc_json/src/: docs.rs  lib_py.rs
src/doc_parser/: Cargo.toml  __main__.py  ann_codegrammar.cfg  code_gen.py  codegrammar.cfg  codegrammar_pre.cfg  doc_parser.py  fix_tokens.py  fn_calls.py  grammar.py  lemmatizer.py  nlp_query.py  num_regex.py  palette.py  requirements.txt  similarity.py  terminals.cfg
src/doc_parser/src/: ac_ir.rs  analysis.rs  docs.rs  grammar.rs  jsonl.rs  main.rs  nl_ir.rs  parse_html.rs  parse_json.rs  search_tree.rs  sentence.rs  specifier.rs  type_match.rs
src/doc_parser/src/parse_tree/: eir.rs  mod.rs  tree.rs
src/doc_parser/src/visualization/: mod.rs  tree.rs
src/nlp/: .env  Dockerfile  __main__.py  codegrammar.cfg  docker-compose.yml  fix_tokens.py  ner.py  nlp_query.py  requirements.txt  server.py  similarity.py  tokenizer.py  word_to_num.py
src/nlp/visualization/: __init__.py  astvis.py  palette.py
src/pyrs_ast/: __init__.py  ast_types.py  expr.py  lib.py  scope.py  use.py
src/rs_doc_parser/: Cargo.toml
src/rs_doc_parser/src/: grammar.rs  jsonl.rs  main.rs  nl_ir.rs  parse_html.rs  search_enum.rs  search_tree.rs  sir.rs  tokens.rs  tree.rs  type_match.rs
src/rs_doc_parser/src/parse_tree/: eir.rs  mod.rs  tree.rs
src/stanford_corenlp/: interface.py
src/visualization/: __main__.py  astvis.py  palette.py  requirements.txt
src/webui/: Dockerfile  __init__.py  requirements.txt
