[package]
name = "py_cargo_utils"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_cargo_utils"

crate-type = ["cdylib"]

[dependencies]
crates-index = "0.17.0"
cargo-clone-crate = "0.1.6"
home = "0.5.3"

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]