[package]
name = "py_cargo_utils"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "py_cargo_utils"
crate-type = ["cdylib"]

[dependencies]
crates-index = "0.17.0"
cargo-clone-crate = "0.1.6"
home = "0.5.3"
scraper = "0.12.0"
selectors = "0.22.0"
lazy_static = "1.4.0"
rayon = "1.5.1"
syn = { version = "1.0", features = ["parsing", "full"] }
syn-serde = { version = "0.2", features = ["json"] }

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]