[package]
name = "astx"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "astx"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
syn = { version = "1.0", features = ["parsing", "full"] }
syn-serde = { version = "0.2", features = ["json"] }

[dependencies.pyo3]
version = "0.14.2"
features = ["extension-module"]