[package]
name = "chartparse"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.8"
itertools = "0.10.1"
indexmap = "1.7.0"
fnv = "1.0.3"
smallvec = "1.6.1"