[package]
name = "doc_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates-index = "0.17.0"
cargo-clone-crate = "0.1.6"
home = "0.5.3"
scraper = "0.12.0"
selectors = "0.22.0"
lazy_static = "1.4.0"

syn = { version = "1.0", default-features = false, features = ["parsing", "full", "visit-mut", "visit"] }
quote = "1.0"

rayon = "1.5.1"
itertools = "0.10.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chartparse = { path = "../chartparse" }
reqwest = { version = "0.11.6", features = ["blocking"] }
url = "2.2.2"
rmp = "0.8.10"
ndarray = "0.15.3"
ndarray-linalg = { version = "0.14.1", features = ["intel-mkl-static"] }

clap = "3.0.0-beta.4"
pastel = "0.8.1"
webbrowser = { version = "0.5", git = "https://github.com/philippeitis/webbrowser-rs.git" }

roogle-engine = "1.0.2"
anyhow = "1.0"