[package]
name = "rs_doc_parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", default-features = false, features = ["parsing", "full", "visit-mut", "visit"] }
quote = "1.0"
crates-index = "0.17.0"
cargo-clone-crate = "0.1.6"
home = "0.5.3"
scraper = "0.12.0"
selectors = "0.22.0"
lazy_static = "1.4.0"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chartparse = { path = "../chartparse" }

[dependencies.pyo3]
version = "0.14.5"
features = ["auto-initialize"]